tests/const_block_compiler_error_bad.stderr
tests/const_block_compiler_error_bad.sl:5:3: SL2075: consteval error: boom
